--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,9 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 100px;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 a {
